[workspace]
members = ["packages/web3mq_mls_group", "packages/web3mq_chat/example/native"]
# resolver = "2"

[workspace.dependencies]
openmls = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main", features = [
    "test-utils",
] }
openmls_traits = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
openmls_rust_crypto = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
openmls_basic_credential = { git = "https://github.com/Generative-Labs/openmls.git", branch = "main" }
